<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="enter_tv">Вход</string>
    <string name="email_text">Email</string>
    <string name="password_text">Пароль</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">Введите пароль</string>
    <string name="enter_btn_txt">Вход</string>
    <string name="not_exists_acc">Нет аккаунта?</string>
    <string name="registration_tv">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="vk">vk</string>
    <string name="classmates">Classmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_view_txt">Главная</string>
    <string name="favorite_view_txt">Избранное</string>
    <string name="account_view_txt">Аккаунт</string>
    <string name="search_courses_hint">Search courses...</string>
    <string name="add_by_date">По дате добавления</string>
    <string name="no_favorites_courses">Нет избранных курсов</string>
    <string name="favorite">Избранное</string>
</resources>